# substy

./: .env.example  .gitignore  Makefile  README.md  docker-compose.ci.yml  docker-compose.dev.yml
.github/workflows/: ci.yml
infra/: docker-compose.yml
scripts/: smoke_all.sh  smoke_bff.sh
services/auth/: Dockerfile  pyproject.toml
services/auth/auth_service/: main.py
services/auth/auth_service/api/: auth.py  dependencies.py  errors.py  health.py
services/auth/auth_service/core/: constants.py  exceptions.py  jwt.py  logging.py  rate_limiter.py  security.py  settings.py
services/auth/auth_service/domain/: models.py
services/auth/auth_service/infrastructure/: arq_worker.py  containers.py  telemetry.py
services/auth/auth_service/migrations/: 001_init.sql
services/auth/auth_service/repositories/: sessions.py  users.py
services/auth/auth_service/schemas/: auth.py  common.py
services/auth/auth_service/services/: auth.py
services/auth/auth_service/tests/integration/: conftest.py  test_auth_flow.py
services/auth/auth_service/tests/unit/: test_auth_service.py
services/bff/: Dockerfile  docker-compose.yml  pyproject.toml
services/bff/bff_gateway/: main.py
services/bff/bff_gateway/api/: auth.py  system.py  (+3 more)
services/delivery/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
services/delivery/delivery_service/: main.py
services/notifications/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
services/subscriptions/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
services/subscriptions/subscriptions_service/: main.py
services/subscriptions/subscriptions_service/api/: dependencies.py  errors.py  health.py  internal.py  subscriptions.py  topics.py
services/subscriptions/subscriptions_service/core/: dependencies.py  exceptions.py  logging.py  pagination.py  settings.py
services/subscriptions/subscriptions_service/infrastructure/: db.py  telemetry.py
services/subscriptions/subscriptions_service/migrations/: 001_init.sql  002_subscription_preferences.sql
services/subscriptions/subscriptions_service/repositories/: records.py  subscriptions.py  topics.py
services/subscriptions/subscriptions_service/schemas/: common.py  subscriptions.py  topics.py
services/subscriptions/subscriptions_service/services/: subscriptions.py  topics.py
services/subscriptions/subscriptions_service/tests/integration/: conftest.py  test_subscriptions_flow.py
services/subscriptions/subscriptions_service/tests/unit/: test_services.py
(+91 files in other folders)
